--- a/index.html
+++ b/index.html
@@ -49,21 +49,80 @@
       <div class="fsnav-directory">
         <div class="fsnav-directory-left">
           <div class="fsnav-directory-left-grid">
-            <a href="#about-me" class="fsnav-link">About Me</a>
+            <a
+              href="#about-me"
+              id="fsnav-about-me"
+              data-image-id="fsnav-about-me-img"
+              class="fsnav-link"
+              >About Me</a
+            >
           </div>
           <div class="fsnav-directory-left-grid">
-            <a href="#project" class="fsnav-link">Projects</a>
+            <a
+              href="#project"
+              id="fsnav-project"
+              data-image-id="fsnav-project-img"
+              class="fsnav-link"
+              >Projects</a
+            >
           </div>
           <div class="fsnav-directory-left-grid">
-            <a href="#academics" class="fsnav-link">Academics</a>
+            <a
+              href="#academics"
+              id="fsnav-academics"
+              data-image-id="fsnav-academics-img"
+              class="fsnav-link"
+              >Academics</a
+            >
           </div>
           <div class="fsnav-directory-left-grid">
-            <a href="#contact" class="fsnav-link">Contact Info</a>
+            <a
+              href="#contact"
+              id="fsnav-contact"
+              data-image-id="fsnav-contact-img"
+              class="fsnav-link"
+              >Contact Info</a
+            >
           </div>
         </div>
-        <div class="fsnav-directory-right"></div>
+        <div class="fsnav-directory-right">
+          <div class="fsnav-background">
+            <img
+              id="fsnav-about-me-img"
+              class="fsnav-background-img"
+              src="/images/afc010b9-1f81-4aaa-b0f7-51f31bbb3819.JPG"
+            />
+            <img
+              id="fsnav-project-img"
+              class="fsnav-background-img"
+              src="/images/image 2.jpg"
+            />
+            <img
+              id="fsnav-academics-img"
+              class="fsnav-background-img"
+              src="/images/Hero-2210x1200.jpg"
+            />
+            <img
+              id="fsnav-contact-img"
+              class="fsnav-background-img"
+              src="/images/a9703f02-4287-4bf3-a508-ad7d28b58d3e.JPG"
+            />
+          </div>
+        </div>
       </div>
-      <div class="fsnav-lower-menu"></div>
+      <div class="fsnav-lower-menu">
+        <div class="fsnav-lower-menu-text">Quick Links ></div>
+        <div class="fsnav-lower-menu-links">
+          <a href="https://www.linkedin.com/in/manuel-pena-417262290/"
+            >LinkedIn</a
+          >
+          <a
+            href="https://drive.google.com/file/d/1SLKByi2ubXg_6PMSrAHJxrKwyjzjHBYW/view?usp=sharing"
+            >Resume</a
+          >
+          <a href="https://github.com/ManuP6789">GitHub</a>
+        </div>
+      </div>
     </div>
     <div class="top-bar">
       <div class="left-section">
@@ -125,8 +184,7 @@
             <div class="about-me-my-name">Hello my name is</div>
             <div class="about-me-name">Manuel Pena</div>
             <div class="about-me-description">
-              I am a sophomore, computer science student in the School of
-              Engineering at
+              I am a Computer Science Junior in the School of Engineering at
               <a
                 id="tufts-link"
                 class="tufts-link"
@@ -203,20 +261,18 @@
             </li>
           </ul>
           <p id="face-design-description" class="project-description-text">
-            Team Coordinator for the Face Design Project in the 
+            Team Coordinator for the Face Design Project in the
             <a
-                id="tufts-link"
-                class="tufts-link"
-                style="color: black;"
-                href="https://sites.tufts.edu/idea/"
-                >Tufts Human Factors Idea Lab
-            </a>. 
-            The Face Design project uses the Nvidia SyleGAN
-            Face Generator to identify a face that you want to display. It
-            displays an array of nine faces and iterate through the faces that
-            looks most familiar until you get the face you want. My role as team
-            coordinator was to delegate tasks, run team meetings, and setting
-            goals.
+              id="tufts-link"
+              class="tufts-link"
+              style="color: black"
+              href="https://sites.tufts.edu/idea/"
+              >Tufts Human Factors Idea Lab </a
+            >. The Face Design project uses the Nvidia SyleGAN Face Generator to
+            identify a face that you want to display. It displays an array of
+            nine faces and iterate through the faces that looks most familiar
+            until you get the face you want. My role as team coordinator was to
+            delegate tasks, run team meetings, and setting goals.
           </p>
         </div>
 
@@ -304,8 +360,8 @@
               <h3>Medford, MA</h3>
               <p><b>Graduation year: </b>2026</p>
               <p><b>Major:</b> Computer Science</p>
-              <p><b>GPA: </b> 3.82</p>
-              <p>Dean's List 3 semesters</p>
+              <p><b>GPA: </b> 3.73</p>
+              <p>Dean's List 4 semesters</p>
             </div>
             <div class="ug-display-card">
               <img class="ug-img" src="/images/tufts.png" alt="Error" />
@@ -389,7 +445,16 @@
           <div class="cw-display-card">Introduction to Computer Science</div>
           <div class="cw-display-card">Bridge to Higher Mathematics</div>
           <div class="cw-display-card">General Physics 1</div>
-          <div class="cw-display-card">EN1: The Craft of Computer Science</div>
+          <div class="cw-display-card">Web Programming</div>
+          <div class="cw-display-card">Number Theory</div>
+          <div class="cw-display-card">Linear Algebra</div>
+          <div class="cw-display-card">
+            Assembly Language and Machine Structure
+          </div>
+          <div class="cw-display-card">Distributed Systems</div>
+          <div class="cw-display-card">Intro to Machine Learning</div>
+          <div class="cw-display-card">Algorithms</div>
+          <div class="cw-display-card">Engineering Management</div>
         </div>
       </div>
     </div>
