--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         </div>
       </div>
     </div>
+    <div class="transition-bar"></div>
     <div id="about-me" class="about-me">
       <div class="about-me-header hidden">
         <div class="about-me-header-container">
@@ -198,7 +199,7 @@
             <div class="about-image-container">
               <img
                 class="about-image"
-                src="images/SOLES Headshots-156.jpg"
+                src="images/RTW_8803 (1) 3.jpg"
                 alt=":o"
               />
             </div>
