--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+  @Author: Your name
+  @Date:   2023-11-23 15:54:57
+  @Last Modified by:   Your name
+  @Last Modified time: 2024-09-14 10:40:10
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -513,5 +519,6 @@
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="/scripts/slick-carousel.js"></script>
+    <script src="/scripts/preloader.js"></script>
   </body>
 </html>
