add preloader screen

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   @Author: Your name
   @Date:   2023-11-23 15:54:57
   @Last Modified by:   Your name
-  @Last Modified time: 2024-09-14 10:40:10
+  @Last Modified time: 2024-09-14 10:59:43
 -->
 <!DOCTYPE html>
 <html>
@@ -40,6 +40,7 @@
     />
   </head>
   <body class="body">
+    <div id="preloader">Loading...</div>
     <div class="fsnav">
       <div class="fsnav-top-bar">
         <div class="fsnav-top-bar-left-section">
